[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiprio-mcp"
version = "0.3.1"
description = "23 production API tools as a Claude MCP server — email validation, DNS, web scraping, NLP, and more. Works with Claude Code, Claude Desktop, Cursor, Cline, Continue, and any MCP client."
authors = [{name = "ForeverTools", email = "theworkshop@kiprio.com"}]
maintainers = [{name = "ForeverTools", email = "theworkshop@kiprio.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "mcp",
    "mcp-server",
    "mcp-tools",
    "model-context-protocol",
    "claude",
    "claude-code",
    "claude-desktop",
    "anthropic",
    "cursor",
    "windsurf",
    "cline",
    "cline-mcp",
    "continue",
    "continue-dev",
    "vscode-mcp",
    "zed",
    "ai",
    "llm",
    "ai-tools",
    "developer-tools",
    "api-tools",
    "email-validation",
    "dns-lookup",
    "ssl-check",
    "web-scraping",
    "nlp",
    "validate-email",
    "whois",
    "ip-lookup",
    "sentiment-analysis",
    "text-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Communications :: Email",
    "Topic :: System :: Networking :: Monitoring",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://kiprio.com"
Repository = "https://github.com/ForeverTools/kiprio-mcp"
Documentation = "https://kiprio.com/docs/"

[project.scripts]
kiprio-mcp = "kiprio_mcp:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["kiprio_mcp.py"]

[tool.hatch.metadata]
allow-direct-references = true
